--- a/metadata.yaml
+++ b/metadata.yaml
@@ -43,5 +43,6 @@ subjects:
 - !lcsh 'France -- History -- Louis XIII, 1610-1643 -- Fiction'
 - !lcsh 'Historical fiction'
 - !lcc 'PQ'
+- GITenberg
 title: 'Kolme muskettisoturia: Historiallinen romaani'
 url: http://www.gutenberg.org/ebooks/37885
